platforms/vps-k8s/kustomize/base/apps/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextcloud
        app.kubernetes.io/component: app
        ofc/network: frontend
        ofc/network-backend: "true"
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:29-apache
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app
              mountPath: /var/www/html
            - name: custom-config
              mountPath: /var/www/html/config/custom.config.php
              subPath: custom.config.php
              readOnly: true
      volumes:
        - name: app
          persistentVolumeClaim:
            claimName: nextcloud-app
        - name: custom-config
          configMap:
            name: nextcloud-config
