platforms/vps-k8s/kustomize/base/apps/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
spec:
  selector:
    app.kubernetes.io/name: nextcloud
  ports:
    - port: 80
      targetPort: 80
