platforms/vps-k8s/kustomize/base/apps/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "16G"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cloud.DOMAIN_PLACEHOLDER
      secretName: nextcloud-tls
  rules:
    - host: cloud.DOMAIN_PLACEHOLDER
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 80
